updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>first webpage created, </p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>El Salvador, currently living in Miami</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Back in my country, I used to love downhill. Now my new favorite activity is snorkeling.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Becoming a software developer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I have been here in Miami for 3 years now.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Because it is all about creativity and problem solving.</p>
     </section>
 
     <footer id="footer">
